# scs-telemetry

./: CMakeLists.txt  readme.md  scs_telemetry_ws_plugin.def  scs_ws_plugin.ini
.github/: FUNDING.yml
src/: config.cpp  config.hpp  main.cpp  plugin.cpp  plugin.hpp  plugin_log.cpp  plugin_log.hpp  scs_context.hpp  scs_helpers.cpp  scs_helpers.hpp  telemetry_state.cpp  telemetry_state.hpp  websocket_server.cpp  websocket_server.hpp
